--- a/pages/nf4514/n12565761.md
+++ b/pages/nf4514/n12565761.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【大选更新11.21】美50州再游行 挺川普" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/IMG_2543-1-600x400.jpg"/>
+<div><img alt="【大选更新11.21】川普：乔州舞弊信息将出炉" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/IMG_2543-1-600x400.jpg"/>
 <div class="caption">
  11月21日，美国各州举行集会游行，传递出抗议大选舞弊与支持川普连任的心声。图为上周末在华府集会的美国民众（施萍/大纪元）
 </div></div><hr/>
