同步于: 11月22日1时52分

--- a/pages/nf4514/n12565761.md
+++ b/pages/nf4514/n12565761.md
@@ -49,6 +49,24 @@
  以下是美国大选情况的实时更新：
 </h4>
 <h3>
+ 共和党全国委员会主席督促密歇根州延迟认证
+</h3>
+<p>
+ 共和党全国委员会主席罗娜·麦克丹尼尔（Ronna McDaniel）和密歇根州共和党主席劳拉·考克斯（Laura Cox）督促密歇根州检票委员会，延迟14天认证大选结果，并审计韦恩县的选举结果。
+</p>
+<p>
+ 但密歇根州州务卿表示，州法律排除在认证前进行审计。
+</p>
+<h3>
+ 朱利安尼指控Dominion主管与Antifa有关联
+</h3>
+<p>
+ 川普总统的律师鲁迪·朱利安尼（Rudy Giuliani）周四（11月19日）在谈到Dominion投票系统公司的腐败问题时，提到了该公司的领导层。他指控该公司的一名主管埃里克·库默（Eric Coomer）与Antifa有密切关系。
+</p>
+<p>
+ 朱利安尼说，库默是一个恶毒的人，他在社交媒体上写了有关总统的可怕的话，完全带有偏见，他还说，“他们将会解决这次大选”。
+</p>
+<h3>
  联邦参议员督促乔州检查邮寄选票
 </h3>
 <p>
