--- a/pages/p1/953363.md
+++ b/pages/p1/953363.md
@@ -1,4 +1,4 @@
-### 高校学生不再沉默 传当局紧张定性政治事件(图)
+### 疫情烧津沪蒙延至河北 多地急封天空疑现异象(视频/图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="东莞学生要求和校方对话" src="https://img3.secretchina.com/pic/2020/9-25/p2782971a427664875-ss.jpg"/>
+  <img alt="河北 武汉肺炎" src="https://img3.secretchina.com/pic/2020/11-22/p2823001a505022245-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   东莞学生要求和校方对话（网络图片）
+   继天津、上海爆发本土疫情后，河北唐山疑似也沦陷。（图片来源：视频截图）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,65 +21,56 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月25日讯】（看中国记者端木珊综合报导）中国教育部门下令大陆
+  【看中国2020年11月22日讯】（看中国记者黎小葵综合报导）中国
   <strong>
-   高校
+   <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
+    武汉肺炎
+   </span>
   </strong>
-  开学后仍要加强防疫措施，以防止
-  <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
-   武汉肺炎
-  </span>
-  疫情反弹。但多地高校因采取强硬的
+  疫情升温，继天津、上海、内蒙古爆发本土疫情后，
   <strong>
-   封闭式管理
+   河北
   </strong>
-  措施，引发学生不满，甚至在校园内
+  省再通报，天津一名患者曾至
   <strong>
-   抗议
+   唐山
   </strong>
-  ，要求“
+  和朋友聚餐、同游，在当地有大量的密切接触者，疫情恐将
   <strong>
-   解封
+   迅速扩散
   </strong>
-  ”。学生的抗议令当局紧张，传当局已将相关抗议定性为政治事件。
+  。与此同时，有网传视频显示唐山天空疑似出现异象。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  率先打破沉默的是陕西西安外国语大学的学生。据自由亚洲电台报道，9月20日晚，有该校学生在宿舍露台上集体大叫，至少8栋宿舍楼的学生响应
-  <span href="https://www.secretchina.com/news/gb/tag/喊楼" target="_blank">
-   喊楼
+  中国疫情复燃，中国卫健委20日通报新增病例数16人，包括上海、天津。值得注意的是，天津市在13天内至少出现10名患者，最初是2名天津海联冷冻食品有限公司的员工确诊，之后东疆港区瞰海轩小区陆续爆出8人感染。东疆港区瞰海轩小区最早病例是一同在天津杨北物流园工作的3名搬运工，3人为室友，其中1人感染曾搭同一部电梯的同栋住户。接着，20日再爆出有4人感染，3人为同一家人，另1人是他们的邻居。
+ </p>
+ <p>
+  尽管天津当局已将该社区升级为“高风险地区”，约1900名居民被迫隔离，但经疫调结果发现，其中1名确诊者曾在11月15日前往河北省唐山市与多名朋友聚餐、同游。
+ </p>
+ <p>
+  据了解，这名确诊患者在15日时自驾至河北省唐山市滦南县与4名友人聚餐，聚会结束后5人各自返回天津、滦南县和乐亭县的住处。直至疫调结果出炉前，唐山4人出入多公共场所、医院，有大量密切接触者。
+ </p>
+ <p>
+  滦南县疾控中心于19日曾发紧急通告，封闭4个小区、2个村庄、以及县果菜批发市场；乐亭县20日也封闭了2个小区。
+ </p>
+ <p>
+  到11月21日，《界面新闻》引述消息称，2020年11月20日晚，河北南堡开发区接到唐山官方关于天津市东疆港区瞰海轩小区居民
+  <span href="https://www.secretchina.com/news/gb/tag/新冠病毒" target="_blank">
+   新冠病毒
   </span>
-  ，高呼“解封”口号。
- </p>
- <p>
-  有学生表示，除了封校，最不满的是校方管理不善，更有甚者，校方趁火打劫，严重影响他们的日常生活。“最严重的是卖过期的发霉食品，大学生超市动不动就关门，让我们彻底没地方买东西了，就完全没有办法满足我们日常生活需求。4个女生浴室经常只有一个可以使用，就让全校女生在一个浴室里洗澡。”该校学生表示。
- </p>
- <p style="text-align:center">
- </p>
- <p>
-  此后，山西、天津、安徽、四川、广东等地有
-  <span href="https://www.secretchina.com/news/gb/tag/高校" target="_blank">
-   高校
-  </span>
-  学生相继开始抗议。
- </p>
- <p>
-  安徽合肥大学学生批评学校双重标准，对学生封校，却又让教职工自由进出校园。广东财经大学华商学院的学生则对学校避而不谈是否让学生离校放十一假而感到不满，计划在宿舍内大叫
-  <span href="https://www.secretchina.com/news/gb/tag/抗议" target="_blank">
-   抗议
-  </span>
-  。
+  (又称中共病毒，COVID-19)核酸检测阳性人员的密切接触者的协查函，指南堡开发区有居民曾与该核酸阳性人员有接触。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -94,7 +85,7 @@
   </div>
  </center>
  <p>
-  此外，网络传出的一组图片显示，有广东东莞的学生疑受香港影响，向校方提出了五大诉求。这些诉求包括公开天价水电事件跟进进展；公开校园网、卡方案招投标实施细则；正面回应“外卖禁令”并追责问责；公布十一中秋放假安排及后续封闭实施细则；民主推选学生代表与校方直接对话。
+  丰南区官方随后也发布通告称，2020年11月20日天津核酸阳性人员杨某某曾在丰南境内加油，经区疾控中心流调，陈某某，女，唐山市丰南区黑沿子镇京化裕丰加油站职工。 11月16日天津核酸阳性人员从滦南县返回滨海新区途中，曾进入黑沿子镇京化裕丰加油站加油，加油期间，杨某某与加油站工作人员陈某某接触。陈某某确定为天津核酸阳性人员的密切接触者，目前正在接受集中隔离医学观察。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -109,50 +100,7 @@
   </div>
  </center>
  <p>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <blockquote class="twitter-tweet">
-  <p dir="ltr" lang="zh">
-   香港民主抗议浪潮影响东莞！
-   <br>
-    学生开始提五大訴求，缺一不可！
-    <br>
-     要求民主推选学生会代表和校方对话......
-     <span href="https://t.co/9oi2XQYGkg">
-      pic.twitter.com/9oi2XQYGkg
-     </span>
-    </br>
-   </br>
-  </p>
-  <center>
-   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-    <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-    </div>
-   </div>
-   <div>
-    <center>
-     <div id="div-gpt-ad-1589559869784-0">
-     </div>
-    </center>
-   </div>
-  </center>
-  — 冷山时评 (@lengshanshipin)
-  <span href="https://twitter.com/lengshanshipin/status/1308669528507707398?ref_src=twsrc%5Etfw">
-   September 23, 2020
-  </span>
- </blockquote>
- <p>
+  但陈某某在接受隔离前，曾前往多处、与多人接触。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -167,7 +115,7 @@
   </div>
  </center>
  <p>
-  在多地高校学生展开抗议后，有消息称，当局已经将高校学生的喊楼抗议定为政治事件。
+  11月17日上午8时，陈某某下班骑电动车回南堡开发区三友生活区，期间在南堡开发区三友生活区南堡肉哥猪肉店购买猪肉，然后前往南堡开发区益丰商贸城购买韭菜。晚上6时左右在肉哥猪肉店旁边菜鸟驿站取快递，其余时间未外出。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -182,7 +130,37 @@
   </div>
  </center>
  <p>
-  知名财经评论人士“财经冷眼”日前在推特发文说，“目前国内教育、公安部门如临大敌！无所不在的境外敌对势力又成了背锅侠！”
+  11月18日上午8时，陈某某骑电动车正常上班；11月19日上午8时下班，9时30分左右前往南堡开发区工商银行（南堡开发区医院对面），在社保窗口咨询社保问题，然后返回住处。当天下午4时左右，在菜鸟驿站取快递。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  11月20日上午8时，陈某某骑电动车上班，在公司直接被拉到隔离点。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  截至发稿前，网络传出多个视频显示，河北多地紧急封闭，天空也疑似出现异象。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -200,22 +178,34 @@
   <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="fluid" data-ad-layout="in-article" data-ad-slot="3646767294" style="display:block; text-align:center;">
   </ins>
  </center>
- <p>
-  推文上附了一张疑似某高校某个班级的群公告，公告称，“据国家安全部门调查，西安外国语大学事项是由外国势力挑唆导致，现国外媒体已经大肆报道，今天陕西省自顶向下逐层开会到达我们班级。该事件已经上升到政治层级，请大家严肃对待，今晚全校老师将对各寝室楼进行巡查、抓捕今晚喊楼的学生，请同学们理智、理性、谨慎对待。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
+ <blockquote class="twitter-tweet">
+  <p dir="ltr" lang="zh">
+   河北 唐山市乐亭县 出现几佰只鹤
+   <br>
+    乐亭县也在疫情 控管中
+    <span href="https://t.co/4SjV24DhOx">
+     pic.twitter.com/4SjV24DhOx
+    </span>
+   </br>
+  </p>
+  <center>
+   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+    <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
     </div>
-   </center>
-  </div>
- </center>
- <p>
+   </div>
+   <div>
+    <center>
+     <div id="div-gpt-ad-1589559869784-0">
+     </div>
+    </center>
+   </div>
+  </center>
+  — 白七的纪录 (@tw_tomy_)
+  <span href="https://twitter.com/tw_tomy_/status/1329810950526963712?ref_src=twsrc%5Etfw">
+   November 20, 2020
+  </span>
+ </blockquote>
+ <p style="text-align:center">
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -231,9 +221,9 @@
  </center>
  <blockquote class="twitter-tweet">
   <p dir="ltr" lang="zh">
-   安徽合肥工业大学喊楼事件传到陕西，目前国内教育、公安部门如临大敌！ 无所不在的境外敌对势力又成了背锅侠！
-   <span href="https://t.co/RID3s26UiF">
-    pic.twitter.com/RID3s26UiF
+   河北唐山滦南急寻天津确诊病例密接者。滦南县疫情防控领导小组相继发布关于对安平小区、罗城小区、三丰小区、曙光小区、坨里镇邱庄子村、倴城镇西南街村实行封闭式管理的通告，望广大居民遵守相关规定，自觉配合门禁、测温、登记、消毒、核酸检测等防控措施，未经允许，不得擅自外出。
+   <span href="https://t.co/65qWQbNRBC">
+    pic.twitter.com/65qWQbNRBC
    </span>
   </p>
   <center>
@@ -248,9 +238,9 @@
     </center>
    </div>
   </center>
-  — 财经冷眼 (@caijinglengyan)
-  <span href="https://twitter.com/caijinglengyan/status/1308545200940228609?ref_src=twsrc%5Etfw">
-   September 22, 2020
+  — 金轮法王 (@22KSTQiXDyRoyvm)
+  <span href="https://twitter.com/22KSTQiXDyRoyvm/status/1329699256685379587?ref_src=twsrc%5Etfw">
+   November 20, 2020
   </span>
  </blockquote>
  <p>
@@ -285,7 +275,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -317,13 +307,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/947200.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/947200.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/947200.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/25/947200.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/953363.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/953363.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/953363.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/22/953363.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/947200.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/953363.md' width='0px' height='0px'/>
