--- a/pages/p2/953344.md
+++ b/pages/p2/953344.md
@@ -1,4 +1,4 @@
-### 武汉市中心医院书记蔡莉去职 曾打压“吹哨人”(图)
+### 中国养老金现天量缺口 曝中南海不可告人秘密(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="" src="https://img3.secretchina.com/pic/2020/3-13/p2646701a604755780-ss.jpg"/>
+ <p style="text-align:center">
+  <img alt="中共高官的退休年龄和退休特权引关注。图为中共前高官宋平、李岚清、吴官正（从左而右）" src="https://img2.secretchina.com/pic/2019/4-6/p2397781a812095431-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   武汉中心医院书记蔡莉去职。（图片来源：网络）
+   中共高官的退休年龄和退休特权引关注。图为中共前高官宋平、李岚清、吴官正（从左而右）（图片来源: Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,75 +21,60 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  忧心中国会回到文革时期！前中国黑龙江省鸡西市副市长李传良，真名退出共产党](http://141.164.51.119:10000/videos/news/quit01.html)
-
-#### [ 🔥  走出文化亡国第十集 伪专家和造新闻 － 中共宣传机器愚弄民众的两个“致命暗器”](http://141.164.51.119:10000/videos/news/../res/zcwhwg/index.html)
-
-#### [ 🔥  共和党大会受邀致辞 陈光诚：中共是人类敌人](http://141.164.51.119:10000/videos/news/cgc.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年8月28日讯】（看中国记者苗薇综合报导）中共武汉市中心医院党委书记蔡莉曾因训诫
-  <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
-   武汉肺炎
-  </span>
-  疫情“吹哨人”李文亮，备受舆论谴责。据陆媒报导，蔡莉已经去职，疫情期间，该医院先后有6名医务人员染疫去世，其中包括李文亮。
+  【看中国2020年11月22日讯】（看中国记者林中宇综合报导）11月20日发布的《中国
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/养老金" target="_blank">
+    养老金
+   </span>
+  </strong>
+  第三支柱研究报告》显示，中国预计会有8-10万亿元人民币的养老金缺口，并且会进一步扩大。官方已吹风延迟
+  <strong>
+   退休
+  </strong>
+  计划，引发民间反弹。而
+  <strong>
+   中共高官
+  </strong>
+  退休年龄和特殊待遇,也再次引起关注。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  据《澎湃新闻》报导，该院多名医护人员称，院方在8月27日傍晚6时召开会议时宣布，
-  <span href="https://www.secretchina.com/news/gb/tag/蔡莉" target="_blank">
-   蔡莉
+  11月20日，
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
   </span>
-  不再担任武汉市中心医院党委书记一职，接替蔡莉的是曾任湖北省武汉市肺科医院党委书记的王卫华。会议中没有提及蔡莉免职的具体原因，也没有公布蔡莉新的工作动向。
+  保险行业协会在广州召开“中国寿险业峰会2020暨人身险专委会年会”，并发布《中国养老金第三支柱研究报告》，披露指出，中国预计会有8-10万亿元人民币的养老金缺口，并且会进一步扩大。
  </p>
  <p>
-  有舆论称，在舆论铺天盖地的追讨声中，等了大半年的光景，仅仅等来了四个字：不再担任！这让人情何以堪！
+  中国养老金缺口逐渐扩大，让许多中国中壮年人因此担心，自己每月要预先缴付、近15年来每年节节高涨的养老金，到老时，也许会领不到应得的养老金，甚至有没钱可领之虞。
  </p>
  <p>
-  据悉，武汉市中心医院先后有6名医务人员感染后去世，其中包括
-  <span href="https://zh.wikipedia.org/zh-hans/%E6%9D%8E%E6%96%87%E4%BA%AE" target="_blank">
-   李文亮
+  为避免危机更早爆发，北京当局先前不断放出要把可领养老金的
+  <span href="https://zh.wikipedia.org/wiki/%E9%80%80%E4%BC%91" target="_blank">
+   退休
   </span>
-  、朱和平、江学庆等医生。
+  年龄提高的风声。
  </p>
  <p>
-  武汉肺炎疫情去年底在武汉爆发时，武汉市中心医院眼科医生
-  <span href="https://www.secretchina.com/news/gb/tag/李文亮" target="_blank">
-   李文亮
+  2020年11月3日，《中共中央关于制定国民经济和社会发展第十四个五年规划和二〇三五年远景目标的建议》全文公布，这份《建议》带来了有关延迟
+  <span href="https://www.secretchina.com/news/gb/tag/退休" target="_blank">
+   退休
   </span>
-  在其微信群组提出警告，之后被当地警方训诫，称他“发布不实言论”。
+  的最新信息，那就是“实施渐进式延迟法定退休年龄”。
  </p>
  <p>
-  有港媒报导指，李文亮同时也受到蔡莉的训诫，蔡莉训斥“吹哨人”艾芬医生时曾说：“你视武汉市自军运会以来的城建结果于不顾，你是影响武汉安定团结的罪人，你是破坏武汉市向前发展的元凶。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  李文亮于今年2月6日因感染武汉肺炎不治身亡，此事引发极大舆论反响，当局才在3月20日通报称，撤销对李文亮的训诫书并向家属道歉。
+  消息一出，立即激起千层浪。大批网友对政府此举持反对意见。新浪网友“北京金戈戈”讽刺说，“996，再延迟领养老金，恐怕到时候养老金还没有捂热，打工人已经挂了”；网友“许开祯”质疑道，“你考虑过下岗职工吗？考虑过大批的无业失业者吗？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -104,11 +89,131 @@
   </div>
  </center>
  <p>
-  南方人物周刊3月11日刊登《四人殉职，四人濒危——
-  <span href="https://www.secretchina.com/news/gb/tag/武汉中心医院" target="_blank">
-   武汉中心医院
+  按目前中共退休制度规定，男性年满60岁，女干部年满55岁、女工人年满50岁方可退休。从事井下、高温、高空、特别繁重体力劳动或其他有害身体健康工作的男性，退休年龄在55周岁。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  不过，这只是对一般的退休人群而言，当中提及的干部也只是一般干部。中共官员越往高层去，退休规定也不一样。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  据“燕铭时评”疏理的中共官员等级资料显示：
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  中共官员的领导职务有十级，分别是正国级、副国级、正省部级、副省部级、正厅级、副厅级、正处级、副处级、正科级、副科级；非领导职务有十二级，分别是一级巡视员、二级巡视员，一级调研员、二级调研员、三级调研员、四级调研员，一级主任科员、二级主任科员、三级主任科员、四级主任科员，一级科员、二级科员。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  而根据党政领导干部退休有关规定，国家级领导在职年龄一般不超过70周岁，退休年龄没有相关规定，可至75周岁，要根据一届中央、人大、国务院、政协的任期需要由党中央决定。国家级正职有国家主席，总理、全国人大委员长、全国政协主席、军委主席以及中央政治局常委。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  副国级，70岁。国家级副职有国家副主席、中央政治局委员、候补委员，中央书记处书记、中纪委书记、副总理、国务委员、人大副委员长、政协副主席、最高法院院长、最高检察院检察长。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  正省部级，65岁。但任期未满的可延期3年，至68岁；省部级副职是65岁，但60岁以后要安排人大、政协等“二线”。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  其他厅局级、处科级领导干部，一般男性60岁、女性55岁，女性领导干部和具有高级职称的女性专业技术人员，可以申请年满60周岁退休。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  在2018年的人大会议上，中共已修宪废除了国家主席、副主席的任期限制，被认为是为
+  <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
+   习近平
   </span>
-  “至暗时刻”》文章中提到，疫情期间，包括蔡莉、武汉中心医院院长彭义香、以及纪委书记李蜜等院方高层，压制医护人员提出疫情预警，迫使他们在没有防护下，暴露于病毒中，导致医院300多名医护人员感染、4人死亡，4人仅靠仪器维持生命。
+  终身掌权铺路，这在当下是个热话题，显然，对于习近平包括王岐山，不存在退休年龄问题。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -123,7 +228,7 @@
   </div>
  </center>
  <p>
-  据悉，蔡莉长期身处武汉卫生系统的处级官员，曾任武汉市卫计委组织人事处处长，2017年起任武汉市中心医院党委书记。从《南周》报导说，她是典型的不懂技术而外行指挥内行的官僚。
+  一般认为，中国养老金现存问题，与中共强制实行多年的“一胎化”政策造成中国人口老龄化日趋严重有关，另外过去几年，中国经济大幅度下滑，企业减产或关闭，则直接导致中国社保基金缺口持续扩大。中国社保基金的监管不完善，挪用、盗用的腐败也是问题之一。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -138,84 +243,7 @@
   </div>
  </center>
  <p>
-  武汉市中心医院党委书记蔡莉打压“吹哨人”被揭发后，引起舆论公愤，却依然毫发无损。香港独立维权媒体胡评社发布了对蔡莉一家的调查报导。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   蔡莉丈夫以高暴利医药业起家
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  胡评社引述坊间知情人士报料称，蔡莉丈夫为武汉数一数二的医疗器械商，或存在夫妻勾结，利益输送，拥有大量隐秘财产。胡评社调查发现，湖北鑫烨医药原董事长、现任监事的刘爱国多方面特征相符。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  公开资料显示，湖北鑫烨医药有限公司是一家以药品销售，及医疗器械批发、基药配送、药品零售连锁，专科医院为核心业务的医药企业。胡评社称，湖北鑫烨有高达140名员工，历史高管中有刘姓的则仅有刘爱国。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  湖北鑫烨自2004年注册成立，此前有隶属于武汉市药监局背景。2013年，刘以湖北鑫烨名义与9名自然人股东合伙注册了武汉市汉阳区鑫业小额贷款有限公司，注册资本1个亿。而到了2015年11月17日，刘又注册了武汉东方鑫地置业有限公司。刘以高暴利医药业起家，又进军火热的小贷、地产业。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  刘的鑫烨公司多次被武汉市政府评优评先。胡评社表示，在2016年7月13日和2020年2月2日的公开捐赠报导中，刘爱国均以武汉市汉阳区政协常委、湖北鑫烨医药公司董事长公开亮相。
+  不过，美国南卡大学艾肯商学院教授谢田接受美国之音采访时表示，中国的养老金问题根源在于中共治下资源分配不公。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -234,11 +262,25 @@
   </ins>
  </center>
  <p>
-  到了2019年7月2日，刘的鑫烨公司被超级医药央企
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
+  谢田说：“我们现在谈到的养老金问题，一般指的是城市居民。实际上，中共对于机关干部的养老，包括中共自己那些既得利益集团了，他们自己的养老，早已经做了周翔的安排。退休金、养老金付的最高的，就是这些权贵阶层。这个庞大的官僚体系，每年都有这么多人退休，要养活这些人，实际上对社会就是个不公平的负担，超出其他正常国家的负担。中共百分之零点几的人，他们占的医疗资源达百分之几十，这种情况无疑加剧了养老金的负担。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <span href="https://www.secretchina.com/news/gb/tag/中共高官" target="_blank">
+   中共高官
   </span>
-  医药集团下的国药控股湖北公司“收编”，双方合资成立了国药控股鑫烨（湖北）医药有限公司，国药控股占51%而湖北鑫烨则占49%，国药派出董事长，而刘爱国则担任总经理。
+  即便退休，也享有特殊奢侈待遇，这一不可告人秘密近年备受关注。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -253,7 +295,7 @@
   </div>
  </center>
  <p>
-  胡评社说，作为知名企业家，此刘爱国十分低调，公开报导的个人照片，仅能在2016年7月13日的药品捐助中出现。而这一低调，自然也符合裸官家庭保住政治地位之需要。
+  据港媒《动向》杂志2014年1月号披露，2012年全年，中共退休党政军高官61万，其薪酬、福利、待遇总开支7250余亿元（人民币，下同），相当于同年GDP的1.3%，占同年财政收入6.2%。这些有关资料是在2013年12月的一次国务院常务会议提交的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -268,9 +310,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   蔡莉的女儿被指生活奢靡
-  </strong>
+  《动向》还报导，中共2014年退休高官年开支逾675亿元。2014年，仅中共中央政治局常委、人大委员长、国家副主席、中顾委副主任一级的离休高干，公费开支高达3.26亿元，平均每人2,725万元。其它级别逐级配置，形成庞大国库开支。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -285,7 +325,7 @@
   </div>
  </center>
  <p>
-  蔡莉的女儿刘畅曾在加拿大读本科和硕士研究生，在网上晒奢侈包包和化妆品，被《南周》报导后帐号关闭。
+  相关报导：
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -300,7 +340,9 @@
   </div>
  </center>
  <p>
-  《南周》引述知情者举报称，蔡莉的家人都是加拿大国籍。其女儿成绩不好，却能进入当地最好的中学，并且是最早在武汉开着宝马7系、出入奢华场所的官二代之一。
+  <span href="https://www.secretchina.com/news/gb/2019/12/17/916879.html" target="_blank">
+   习近平会见的老人群体 骇人秘密已曝光
+  </span>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -315,7 +357,9 @@
   </div>
  </center>
  <p>
-  刘畅被指在加拿大留学的大学均不知名，且全是自费，现担任武汉的江汉大学法语教师。有猜测指刘畅能进入江汉大学任教，有利益输送。她在2017连续两三年有参加法语教学比赛，估计其应该是2016年进入江汉大学任教。
+  <span href="https://www.secretchina.com/news/gb/2020/06/18/936630.html" target="_blank">
+   疑似中共正部级高官退休金明细表曝光
+  </span>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -347,7 +391,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -379,13 +423,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/944430.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/944430.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/944430.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/28/944430.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/953344.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/953344.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/953344.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/22/953344.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p2/944430.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p2/953344.md' width='0px' height='0px'/>
