--- a/pages/nf4514/n12565761.md
+++ b/pages/nf4514/n12565761.md
@@ -49,6 +49,80 @@
  以下是美国大选情况的实时更新：
 </h4>
 <h3>
+ 伊州选民：左派无法把我吓到沉默
+</h3>
+<p>
+ 周六（21日），选民帕蒂·安妮（Patti Anne）参加了伊利诺伊州弗农丘陵（Vernon Hills）举行的“停止窃选”集会。
+ <br/>
+ <figure class="wp-caption aligncenter" id="attachment_12566655" style="width: 600px">
+  <ok href="https://i.epochtimes.com/assets/uploads/2020/11/ILI-e1605999005173.jpg">
+   <img alt="" class="size-full wp-image-12566655" src="https://i.epochtimes.com/assets/uploads/2020/11/ILI-e1605999005173.jpg"/>
+  </ok>
+  <br/><figcaption class="wp-caption-text">
+   周六（21日），选民帕蒂·安妮（Patti Anne）参加了伊利诺伊州弗农丘陵（Vernon Hills）举行的“停止窃选”集会。 (NTD Television)
+  </figcaption><br/>
+ </figure><br/>
+ <br/>
+ 安妮说，从一开始，她就一直在抗议窃取这次大选。
+</p>
+<p>
+ 她表示：“如此多的舞弊在全国各地发生了，这绝对是荒谬的。
+</p>
+<p>
+ “绝对存在选民舞弊。我们从一开始就知道。我们相信，由于邮寄选票甚至在人们没有要求的情况下就发送给他们，我们就知道了（存在舞弊）。”
+</p>
+<p>
+ 她说，她一直在鼓励更多人大声说 ：“不要害怕”。
+</p>
+<p>
+ “左派尽其所能地压制我们的投票，让我们噤声，我们再也受不了。我们大声说了出来，我们很自豪，我们直言不讳，我们是美国人。我们首先是美国人，”她说。
+</p>
+<h3>
+ 波士顿选民：“不能放弃美国”
+</h3>
+<p>
+ 周六（21日），波士顿选民诺曼·施瓦茨（Norman Schwartz）参加了该市举行的“停止窃选”集会。
+ <br/>
+ <figure class="wp-caption aligncenter" id="attachment_12566635" style="width: 600px">
+  <ok href="https://i.epochtimes.com/assets/uploads/2020/11/red-e1605997235117.jpg">
+   <img alt="" class="size-full wp-image-12566635" src="https://i.epochtimes.com/assets/uploads/2020/11/red-e1605997235117.jpg"/>
+  </ok>
+  <br/><figcaption class="wp-caption-text">
+   周六（11月21日），波士顿选民诺曼·施瓦茨（Norman Schwartz）参加了该市举行的“停止窃选”集会。(NTD Television)
+  </figcaption><br/>
+ </figure><br/>
+ <br/>
+ 他表示，整个总统选举都充满了可疑的活动和反常现象，破坏了每张选票的诚信，但人们不能保持沉默。
+</p>
+<p>
+ “我们可以更大声地说出来。我们可以站起来，希望川普和律师们能够把问题解决，而且最高法院已经（派大法官）负责摇摆州，”他说。 “如果
+ <ok href="https://www.epochtimes.com/gb/tag/%E6%8B%9C%E7%99%BB.html">
+  拜登
+ </ok>
+ 是合法获胜，那我可以接受。
+</p>
+<p>
+ 施瓦茨表示：“（选举舞弊）从未如此糟糕。”“这是不对的。”
+</p>
+<p>
+ “但不能停止投票。也不能放弃美国，”施瓦茨说。
+</p>
+<h3>
+ 麦肯尼：川普胜利的途径是通过最高法院
+</h3>
+<p>
+ 白宫发言人、川普竞选团队顾问凯里·麦肯尼（Kayleigh McEnany）周六（21日）表示，挑战2020年总统大选期间“系统性选民舞弊”的途径是通过法院。
+</p>
+<p>
+ 麦肯尼在《福克斯与朋友们周末版》（Fox &amp; Friends Weekend）节目中说：“我们在密西根州有234份宣誓书，是来自一个县的选民。他们说，这就是我观察到的。我们在宾州有选民说：‘我出来投票，被告知我不能投票，因为有邮寄选票是以我的名义投的。那不是我投的。”
+</p>
+<p>
+ 她也指控主流媒体是选举舞弊的同谋，并表示存在“真正的系统性指控”，将提交给法官。
+</p>
+<p>
+ “我们的司法体系在这种情况下发挥作用，这是媒体无法阻挡的。他们可以试图掩盖它，但美国人民很聪明。7300万人参加投票给总统——这是有史以来在任总统获得的最多票数。他们有发言权。我们的声音会被听到的，”她说。
+</p>
+<h3>
  彭斯：乔州参议员对决是共和党最后一道防线
 </h3>
 <p>
@@ -74,11 +148,7 @@
 <div class="video_fit_container">
 </div>
 <h3>
- 制止
- <ok href="https://www.epochtimes.com/gb/tag/%E6%8B%9C%E7%99%BB.html">
-  拜登
- </ok>
- 窃选 华盛顿DC民众发起摩托骑行
+ 制止拜登窃选 华盛顿DC民众发起摩托骑行
 </h3>
 <p>
  周六一早，华盛顿DC民众发起摩托骑行，8点30分在维吉尼亚摩托骑行起点，10点钟出发沿高速路骑到白宫，并参加12点在那里开始的集会。主办方说估计有数百骑者（hundreds of bikers）；12点在自由广场集会，并有一些人发言，集会后大游行。
