--- a/pages/nf4514/n12567305.md
+++ b/pages/nf4514/n12567305.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【大选更新11.22】保守团体将在六摇摆州提诉" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/144933-600x400.jpg"/>
+<div><img alt="【大选更新11.22】川普要求乔州重新计票" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/470090-600x400.jpg"/>
 <div class="caption">
  图为2020年11月10日，纽约市选举局选务人员对曼哈顿选区的缺席选票进行清点。（黄小堂／大纪元）
 </div></div><hr/>
