同步于: 11月22日23时52分

--- a/pages/nf4514/n12567305.md
+++ b/pages/nf4514/n12567305.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新11.22】川普要求乔州重新计票" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/470090-600x400.jpg"/>
+<div><img alt="【大选更新11.22】川普：永远跟邪恶斗争" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/4cb6a5972ef5ce74fbdae3896b8d60cc-600x400.jpg"/>
 <div class="caption">
- 图为2020年11月10日，纽约市选举局选务人员对曼哈顿选区的缺席选票进行清点。（黄小堂／大纪元）
+ 图为2020年10月20日，美国总统川普在华盛顿特区白宫，举行的共和党全国大会演讲。( Tasos Katopodis/Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
