--- a/pages/p5/953449.md
+++ b/pages/p5/953449.md
@@ -1,4 +1,4 @@
-### 股债双杀的恒大缓口气 中国楼市现更多风险(图)
+### 川普政府制裁中方军企黑名单拟增至35家(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="恒大 楼市 房地产" src="https://img3.secretchina.com/pic/2020/7-12/p2730312a623981027-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="川普 中企 制裁 黑名单" src="https://img2.secretchina.com/pic/2019/3-30/p2392641a136800848-ss.jpg"/>
   <br>
-   恒大事件对未来中国楼市构成风险，更多房地产开发商面临挑战。（图片来源：Adobe Stock）
+   美国拟将另外4家中企列入中共军方所属企业。图为美国国防部。（图片来源：美国政府/公有领域）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,122 +21,67 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月30日讯】（看中国记者文龙综合报导）一封函件引发了金融市场惨剧，导致中国
+  【看中国2020年11月22日讯】（看中国记者丁晓雨综合报导）媒体引述消息人士透露，华盛顿准备再将4家
   <strong>
-   房地产
+   中企
   </strong>
-  开发商
-  <span href="https://www.secretchina.com/news/gb/tag/恒大" target="_blank">
-   恒大
-  </span>
-  的股票和债券价格双双暴跌，9月29日，事件有了新进展。有分析指，
+  列入中共军方所属企业，禁止美国人对其投资。此举将使被列入美国政府
   <strong>
-   恒大
+   制裁黑名单
   </strong>
-  事件对未来中国
+  的中企达到35家，是
   <strong>
-   楼市
+   <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
+    川普
+   </span>
+   (特朗普)
   </strong>
-  构成风险，更多房地产开发商面临挑战。
+  政府对北京强硬的鹰派政策之一。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  9月29日，中国
-  <span href="https://zh.wikipedia.org/wiki/%E4%B8%AD%E5%9C%8B%E6%81%92%E5%A4%A7%E9%9B%86%E5%9C%98" target="_blank">
-   恒大
+  <strong>
+   川普政府拟再增4家
+   <span href="https://www.secretchina.com/news/gb/tag/中企" target="_blank">
+    中企
+   </span>
+   到黑名单
+  </strong>
+ </p>
+ <p>
+  据《路透社》报导，根据一名美国政府官员及一名不愿具名的知情人士透露，美国国防部可能最早在本周就公布这4家被制裁中企名单，也可能于下周公布。这项新的
+  <span href="https://zh.wikipedia.org/wiki/美國對中國的制裁" target="_blank">
+   制裁
   </span>
-  宣布有关持有恒大地产总额1,300亿元（人民币，下同）的战略投资者的最新安排：与持有其中约三分之二的战略投资者签订补充协议，明确这批投资者不会要求进行回购并继续持有恒大地产权益。
+  措施如果实施，将使川普政府制裁的中企由31家增至35家，包括先前已被列入的华为、中国移动、中国电信、海康威视等产业龙头中企。
  </p>
  <p>
-  公告称，这批持有恒大地产863亿元战略投资的投资者并同意，其在恒大地产的股权比例保持不变。
- </p>
- <p>
-  恒大地产同时表示，公司已与持有恒大地产总额155亿元的战略投资者商谈完毕，该等战略投资正办理审批手续；至于持有剩余总额282亿元的战略投资者，目前亦正与他们进行商谈。
- </p>
- <p>
-  恒大地产于2016年底至2017年11月先后引入三批战略投资者，投资金额总计1,300亿元，占增资后的恒大地产36.54%股份，投资期限为2021年1月31日前。
- </p>
- <p>
-  各界关注恒大地产一旦要在限期前偿还本金及利息的话，资金链将出现问题。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  此前，网络中流传的一页截图和随后出现的一封函件引发了金融市场一起“股债双杀”惨剧，9月25日，
+  报导指出，这项“
   <span href="https://www.secretchina.com" target="_blank">
    中国
   </span>
-  恒大系公司股债齐遭血洗。函件指负债高达8,355亿的恒大集团基于时间紧迫为由，恳请广东省政府支持准许将地产业务借壳中国大陆A股深深房上市，否则需要向前期战略投资者偿还1,300亿人民币及137亿人民币分红，将引发一系列系统性风险，包括现金流断裂，影响社会稳定。
+  共产党军事公司”（Communist Chinese Military Companies）清单依据1999年法律授权，要求美国国防部编列出由中共军方“拥有或控制”企业类别，但直到今年才执行。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  函件显示，在现金流断裂后，将影响8,441间上下游合作企业、792个项目、14万员工、61.7万套未交楼单位，並严重影响社会稳定，触发业主大规模维权。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  恒大主席许家印9月24日晚间在发布声明，称相关文件和截图凭空捏造、纯属诽谤，对公司造成严重商誉损害，做出强烈谴责並已向警方报案，“坚决用法律武器维护公司合法权益。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  评级机构标普9月24日晚间发布公告，将恒大前景展望下调至“负面”，因公司的短期债务持续上升，而部分原因与公司积极收购
-  <span href="https://zh.wikipedia.org/zh-cn/%E6%88%BF%E5%9C%B0%E4%BA%A7" target="_blank">
-   房地产
+  今年6月20日，五角大楼已将中国航空工业、中国中车、中科曙光等20家中企业列入名单，这些企业大多数为国企，覆盖航空、通讯、核电、船舶等领域。8月28日，五角大楼又增列了中国交建、中国联通、中国中化等11家企业，为进一步实施
+  <span href="https://www.secretchina.com/news/gb/tag/制裁" target="_blank">
+   制裁
   </span>
-  项目有关。标普称，此前曾期望恒大能够解决其短期债务。
+  奠定基础。
+ </p>
+ <p>
+  报导称，白宫没有立即回应《路透社》记者的置评请求。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -151,11 +96,28 @@
   </div>
  </center>
  <p>
-  中国的
-  <span href="https://www.secretchina.com/news/gb/tag/房地产" target="_blank">
-   房地产
+  <strong>
+   制裁令将在2021年1月11日生效
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  据《自由时报》报导，
+  <span href="https://zh.wikipedia.org/wiki/唐納·川普" target="_blank">
+   川普
   </span>
-  开发商们在过去几年狂飙突进，以高负债的模式快速发展。中国央行和住房城乡建设部8月20日联合召开重点房地产企业座谈会，形成重点房地产企业资金监测和融资管理规则，通过负债率相关的“三道红线”将房企分为四类进行监管。
+  总统在11月12日发布行政命令，禁止美国企业和个人对受中共军方拥有或控制的中企展开投资。这一命令将在2021年1月11日生效，将禁止美国投资者购买这些中共军方企业的证券、基金等金融产品，并要求美国投资者在明年11月11日之前出售相关证券投资。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -170,7 +132,26 @@
   </div>
  </center>
  <p>
-  “三道红线”分别是剔除预收款后的资产负债率大于70%、净负债率大于100%、现金短债比小于1.0倍。若三道红线全部踩中，房企将被归类为红色档，有息负债规模不得增加。若踩中二道红线，则被归为橙色档，有息负债规模年增速不得超过5%。若踩中一道红线，则被归为黄色档，有息债务规模年增速将扩宽至10%。若3道红线均未踩中，则被归为绿色档，有息债务规模年增速可放宽至15%。
+  这项行政命令是基于《国际紧急状态经济权力法》（International Emergency Economic Powers Act）、《国家紧急状态法》（National Emergencies Act），以及《美利坚合众国法典》（United States Code）。与此同时，川普总统宣布全国进入紧急状态，以应对来自北京的威胁。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  报导称，共和党联邦众议员盖拉格（Mike Gallagher）表示，川普政府的行动有助于确保美国人不会无意间补贴了北京当局称要主导未来技术的企业。他还提出了一项法案，拟禁止美国国防部
+  <span href="https://zh.wikipedia.org/wiki/黑名單" target="_blank">
+   黑名单
+  </span>
+  上的中企进入美国资本市场投资。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -189,7 +170,9 @@
   </ins>
  </center>
  <p>
-  澳新银行对恒大事件发布报告称，此事对未来几个季度的中国房地产市场构成事件风险，更多房地产开发商可能面临去杠杆的挑战。
+  <strong>
+   北京利用民企、国企支持军事
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -204,7 +187,7 @@
   </div>
  </center>
  <p>
-  澳新银行资深中国经济学家王蕊等发表报告称，该事件加剧了市场对房地产开发商流动性状况和杠杆比率的担忧；据测算，约有五分之一中国A股房地产上市公司的杠杆比率超过了“三道红线”。
+  报导指出，北京当局一直在通过“军民融合”的国家战略，利用中国民企和国企来支持政府的军事和情报活动，扩大军工综合体规模。川普政府认为，美国投资支持这些中企，将会支持中共军队的扩张。而美国政府也重点制裁了这些支持中共军队发展的中企。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -219,7 +202,7 @@
   </div>
  </center>
  <p>
-  报告称，开发商明年到期的公司债有5,260亿元人民币，离岸美元债到期规模在500亿美元，如果“三道红线”明年实施，房地产开发商将勉力展期或偿还债务。
+  华盛顿这项中共军方企业清单是更广泛政策中的一环，是川普政府对抗北京当局谋取企业民用技术来达成军事用途的做法。例如：美国商务部今年9月已经对中国最大芯片代工厂中芯国际实施出口管制，主要原因就是向该中企供应的设备可能被用在军事目的上。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -234,22 +217,7 @@
   </div>
  </center>
  <p>
-  澳新银行分析称，考虑到政府当前坚定的立场，不太可能给房地产开发商网开一面。尽管恒大在经济运行中发挥的作用不可低估，但政府很可能对限制房地产业杠杆率保持坚定。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  此外，何时以及如何实施新规则仍有待官方表态。澳新认为，北京当局可能推行试点方案。
+  美国证交会和财政部官员8月报告，建议要求在美上市的中概股企业必须在2022年新年前符合审计规定，否则就须强制下市。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -281,7 +249,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -313,13 +281,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947686.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947686.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947686.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/30/947686.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953449.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953449.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953449.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/22/953449.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/947686.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/953449.md' width='0px' height='0px'/>
