--- a/pages/nf4514/n12567305.md
+++ b/pages/nf4514/n12567305.md
@@ -47,25 +47,6 @@
  以下是美国大选情况的实时更新：
 </h4>
 <h3>
- 川普推文：大批选民被剥夺选举权
-</h3>
-<p>
- 总统川普周日下午在推特上发文表示，“除了政治因素（干扰）之外，官司怎么会输掉呢？有大批选民被剥夺了选举权，这个数字远远超过了翻盘宾夕法尼亚州所需的人数。投票观察员被赶出计票室。打算投票的人发现他们已经通过假票投票了——回家！”
-</p>
-<blockquote class="twitter-tweet" data-width="550">
- <p dir="ltr" lang="en">
-  Other than politics, how do you lose a case where large numbers of voters, far more than you need to flip Pennsylvania, are disenfranchised? Vote Observers thrown out of counting rooms. People going to vote finding out they have already voted through a fake ballot – go home!
- </p>
- <p>
-  — Donald J. Trump (@realDonaldTrump)
-  <ok href="https://twitter.com/realDonaldTrump/status/1330555645213483016?ref_src=twsrc%5Etfw">
-   November 22, 2020
-  </ok>
- </p>
-</blockquote>
-<p>
-</p>
-<h3>
  哈佛法学教授：川普仍有几条宪法下的胜利之路
 </h3>
 <p>
@@ -535,6 +516,8 @@
     <p>
      责任编辑：李玲
     </p>
+    <div id="gtx-trans" style="position: absolute; left: 138px; top: 1045.83px;">
+    </div>
    </p>
   </p>
  </p>
