同步于: 11月23日6时52分

--- a/pages/soh6/445693.md
+++ b/pages/soh6/445693.md
@@ -122,6 +122,13 @@
    </div>
   </div>
  </div>
+ <p>
+  在G20演讲中，
+  <ok href="/term/1041">
+   川普
+  </ok>
+  表示，巴黎协定的设计目的不是拯救环境，“而是旨在杀死美国经济。我拒绝放弃数百万的美国工作岗位，并向全球最严重的污染者和环境违规者送去数万亿美元。”
+ </p>
  <h2>
   <strong>
    调查：7成半共和党人称有
