--- a/pages/nf4514/n12567305.md
+++ b/pages/nf4514/n12567305.md
@@ -1,4 +1,4 @@
-### 【大选更新11.22】选民在CNN乔州总部外抗议
+### 【大选更新11.22】宾州案上诉至第3巡回法院
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -47,10 +47,31 @@
  以下是美国大选情况的实时更新：
 </h4>
 <h3>
+ 川普团队向第三巡回上诉法院提诉
+</h3>
+<p>
+ 川普法律团队22日向美国第三巡回上诉法院提出提出上诉，试图翻案；周六（21日），宾夕法尼亚中区联邦地区法院法官马修·布兰（Matthew Brann）拒绝了川普团队的禁令请求、停止认证选举结果。
+</p>
+<p>
+ 川普法律团队的首席律师鲁迪·朱利安尼（Rudy Giuliani）此前表示，布兰的驳回裁决将有助于加快上诉至最高法院的进展。
+</p>
+<h3>
+ 密歇根州众议长：总统从未要求人干涉选举
+</h3>
+<p>
+ 密歇根州众议院议长李·查特菲尔德（Lee Chatfield）22日告诉福克斯新闻，川普总统上周与他们会面时，并没有要求议员们“违法”或“干涉”2020年大选。
+</p>
+<p>
+ 查特菲尔德是11月22日与川普会面的7名州议员之一。他澄清说，外面“有这样的愤怒（谣言），总统要问我们违反法律， 他要问我们干预， 但这些事根本没有发生。”
+</p>
+<p>
+ 目前，共和党全国和州的委员会已呼吁，州检票员委员会（证明选举的机构之一）休会两周，以调查涉嫌违规行为。
+</p>
+<h3>
  川普推文：大批选民被剥夺选举权
 </h3>
 <p>
- 总统川普周日下午在推特上发文表示，“除了政治因素（干扰）之外，官司怎么会输掉呢？有大批选民被剥夺了选举权，这个数字远远超过了翻盘宾夕法尼亚州所需的人数。投票观察员被赶出计票室。打算投票的人发现他们已经通过假票投票了——回家！”
+ 总统川普周日下午发推文说，“除了政治因素（干扰）之外，官司怎么会输掉呢？有大批选民被剥夺了选举权，这个数字远远超过了翻盘宾夕法尼亚州所需的人数。投票观察员被赶出计票室。打算投票的人发现他们已经通过假票投票了——回家！”
 </p>
 <blockquote class="twitter-tweet" data-width="550">
  <p dir="ltr" lang="en">
@@ -81,7 +102,38 @@
  上周，德肖维茨指出，如果川普能将拜登的票数控制在270票以下，那么大选结果必须进入众议院表决。众议院目前由共和党拿下多数席位。
 </p>
 <p>
- 国会众议员莫·布鲁克斯（Mo Brooks）上周告诉《大纪元时报》，国会对接受还是拒绝选举团投票有最终的决定权。
+ 国会众议员莫·布鲁克斯（Mo Brooks）上周告诉《大纪元时报》，国会对“接受还是拒绝”选举团投票有最终的决定权。
+</p>
+<h3>
+ 川普：宾州被驳回的案件都将再上诉
+</h3>
+<p>
+ 宾州法院17日驳回了总统川普（特朗普）竞选团队的监票员诉讼案，川普周六（21日）表示，他将再提出上诉。
+</p>
+<p>
+ 川普在推特上写道，“这一切都是永无止境的猎巫行动的延续，布兰恩法官甚至不允许我们陈述案情或证据，他和宾州国会参议员帕特·‘没有关税’·图米的同类，不是我的朋友，（他们）和奥巴马——难怪了。那里有90万张假票！”
+</p>
+<p>
+ 川普后来接着写道，他“会上诉”。
+</p>
+<p>
+ 参议员图米最近向民主党候选人拜登和贺锦丽表示祝贺。
+</p>
+<blockquote class="twitter-tweet" data-width="550">
+ <p dir="ltr" lang="en">
+  Thanks Mark. It’s all a continuation of the never ending Witch Hunt. Judge Brann, who would not even allow us to present our case or evidence, is a product of Senator Pat “No Tariffs” Toomey of Pennsylvania, no friend of mine, &amp; Obama – No wonder. 900,000 Fraudulent Votes!
+  <ok href="https://t.co/17rk2KsUPs">
+   https://t.co/17rk2KsUPs
+  </ok>
+ </p>
+ <p>
+  — Donald J. Trump (@realDonaldTrump)
+  <ok href="https://twitter.com/realDonaldTrump/status/1330374020613758977?ref_src=twsrc%5Etfw">
+   November 22, 2020
+  </ok>
+ </p>
+</blockquote>
+<p>
 </p>
 <h3>
  数十人聚集在CNN总部外抗议选举报导
@@ -263,39 +315,9 @@
     </p>
     <p>
      根据2016年大选的Edison Research出口民调，只有8％的美国黑人选民选择川普而不是希拉里。但今年爱迪生研究公司（Edison Research）的出口民意调查显示，选择川普的黑人选民已增长到12％，比2016年增长了50％。
-    </p>
-    <h3>
-     川普总统：永远跟邪恶斗争
-    </h3>
-    <p>
-     川普总统早上发推说，“永无休止的猎巫（行动）！ 真悲哀，因为川普是如此热爱美国，是个真正的爱国者！ 他将永不停息地捍卫宪法、与邪恶作斗争！ 让美国再次伟大！”
-    </p>
-    <p>
-     之前他说，看了鲍威尔律师接受Newmax的采访，看到这么多黑幕“这确实使人感到好奇，奥巴马是否在2008年和2012年合法赢得了胜利……”
-    </p>
-    <blockquote class="twitter-tweet">
-     <p dir="ltr" lang="en">
-      After hearing from
-      <ok href="https://twitter.com/hashtag/SidneyPowell?src=hash&amp;ref_src=twsrc%5Etfw">
-       #SidneyPowell
-      </ok>
-      on
-      <ok href="https://twitter.com/newsmax?ref_src=twsrc%5Etfw">
-       @newsmax
-      </ok>
-      , it really makes one wonder if Obama had a legitimate win back in 2008 and again in 2012. Just saying…
-     </p>
-     <p>
-      — Make America Great Again! (@realTrumpForce)
-      <ok href="https://twitter.com/realTrumpForce/status/1330353173958168577?ref_src=twsrc%5Etfw">
-       November 22, 2020
-      </ok>
-     </p>
-    </blockquote>
-    <h3>
      <br/>
      川普团队要求乔治亚州重新计票
-    </h3>
+    </p>
     <p>
      周五乔治亚州认证选举结果后，周六川普团队要求该州重新计票，理由是计票过程中缺乏签名匹配和其它确保有意义重新计票的“重要保障”。
     </p>
