--- a/pages/nsc412/n12567305.md
+++ b/pages/nsc412/n12567305.md
@@ -1,4 +1,4 @@
-### 【大选更新11.22】选民在CNN乔州总部外抗议
+### 【大选更新11.22】宾州案上诉至第3巡回法院
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -47,6 +47,15 @@
  以下是美国大选情况的实时更新：
 </h4>
 <h3>
+ 川普团队向第三巡回上诉法院提诉
+</h3>
+<p>
+ 川普法律团队22日向美国第三巡回上诉法院提出提出上诉，试图翻案；周六（21日），宾夕法尼亚中区联邦地区法院法官马修·布兰（Matthew Brann）拒绝了川普团队的禁令请求、停止认证选举结果。
+</p>
+<p>
+ 川普法律团队的首席律师鲁迪·朱利安尼（Rudy Giuliani）此前表示，布兰的驳回裁决将有助于加快上诉至最高法院的进展。
+</p>
+<h3>
  密歇根州众议长：总统从未要求人干涉选举
 </h3>
 <p>
@@ -93,7 +102,7 @@
  上周，德肖维茨指出，如果川普能将拜登的票数控制在270票以下，那么大选结果必须进入众议院表决。众议院目前由共和党拿下多数席位。
 </p>
 <p>
- 国会众议员莫·布鲁克斯（Mo Brooks）上周告诉《大纪元时报》，国会对接受还是拒绝选举团投票有最终的决定权。
+ 国会众议员莫·布鲁克斯（Mo Brooks）上周告诉《大纪元时报》，国会对“接受还是拒绝”选举团投票有最终的决定权。
 </p>
 <h3>
  川普：宾州被驳回的案件都将再上诉
@@ -548,8 +557,6 @@
     <p>
      责任编辑：李玲
     </p>
-    <div id="gtx-trans" style="position: absolute; left: 193px; top: 1047.25px;">
-    </div>
    </p>
   </p>
  </p>
