--- a/pages/soh6/445693.md
+++ b/pages/soh6/445693.md
@@ -206,10 +206,7 @@
   </strong>
  </h2>
  <p>
-  <ok href="/term/1041">
-   川普
-  </ok>
-  竞选律师、前联邦检察官西德尼·鲍威尔（Sidney Powell）在周末表示，由于
+  前联邦检察官西德尼·鲍威尔（Sidney Powell）在周末表示，由于
   <ok href="/term/1041">
    川普
   </ok>
