--- a/pages/soh6/445693.md
+++ b/pages/soh6/445693.md
@@ -1,4 +1,4 @@
-### 【选情更新11/22】川普团队：下周的诉讼案将有如神助
+### 【选情更新11/22】全美法律战进入新阶段 川普：我们会赢
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -50,6 +50,32 @@
  </p>
  <h2>
   <strong>
+   <ok href="/term/1041">
+    川普
+   </ok>
+   发布推文讨论
+   <ok href="/term/13015">
+    选举舞弊
+   </ok>
+  </strong>
+ </h2>
+ <p>
+  周日晚间，美国总统
+  <ok href="/term/1041">
+   川普
+  </ok>
+  发布推文说，“在某些摇摆州，投票数目多于投票人数。真的不重要吗？阻止检票员、为毫不知情的人投票、伪造选票等等。如此卑鄙的行为。我们会赢！”
+ </p>
+ <div class="soh-embed">
+  <div class="soh-embed-inner">
+   <div class="iframely-embed" style="max-width: 550px;">
+    <div class="iframely-responsive">
+    </div>
+   </div>
+  </div>
+ </div>
+ <h2>
+  <strong>
    林伍德评论
    <ok href="/term/1041">
     川普
@@ -57,6 +83,17 @@
    团队最新声明
   </strong>
  </h2>
+ <p>
+  周日，
+  <ok href="/term/1041">
+   川普
+  </ok>
+  私人律师朱利安尼发布声明指出，鲍威尔将不再代表
+  <ok href="/term/1041">
+   川普
+  </ok>
+  的法律团队行事。
+ </p>
  <p>
   <ok href="/term/1041">
    川普
@@ -74,17 +111,6 @@
    </div>
   </div>
  </div>
- <p>
-  周日，
-  <ok href="/term/1041">
-   川普
-  </ok>
-  私人律师朱利安尼发布声明指出，鲍威尔将不再代表
-  <ok href="/term/1041">
-   川普
-  </ok>
-  的法律团队行事。
- </p>
  <h2>
   <strong>
    全美多地的计票结果等待认证
