--- a/pages/nf4514/n12569219.md
+++ b/pages/nf4514/n12569219.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新11.23】鲍威尔：禁共产主义者窃国" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/Sidney-Powell-EpochTimes_510A8666-1-1-600x400.jpg"/>
+<div><img alt="【大选更新11.23】川普团队乔州将提大诉讼" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229684615-600x400.jpg"/>
 <div class="caption">
- 图为著名律师鲍威尔（Sidney Powell）。(Drew Angerer/Getty Images)
+ 2020年11月19日，华盛顿特区共和党全国委员会（Republican National Committee）总部，鲁迪‧朱利安尼和其他川普法律顾问举行新闻发布会。朱利安尼指着一张地图向媒体讲述与2020年大选舞弊有关的各种诉讼。(Drew Angerer/Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
@@ -238,8 +238,8 @@
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/nsc418/n12569219.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/nsc418/n12569219.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/nsc418/n12569219.md.png'/></a> <br/>
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/nf4514/n12569219.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/nf4514/n12569219.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/nf4514/n12569219.md.png'/></a> <br/>
 原文地址（需翻墙访问）：https://www.epochtimes.com/gb/20/11/23/n12569219.htm
 
 
@@ -247,4 +247,4 @@ https://github.com/gfw-breaker/banned-news3/blob/master/pages/nsc418/n12569219.m
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/nsc418/n12569219.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/nf4514/n12569219.md' width='0px' height='0px'/>
