--- a/pages/nf4514/n12569219.md
+++ b/pages/nf4514/n12569219.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新11.23】鲍威尔：禁共产主义者窃国" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/Sidney-Powell-EpochTimes_510A8666-1-1-600x400.jpg"/>
+<div><img alt="【大选更新11.23】上诉法院：急审宾州诉讼案" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229295633-600x400.jpg"/>
 <div class="caption">
- 图为著名律师鲍威尔（Sidney Powell）。(Drew Angerer/Getty Images)
+ 图为2020年10月26日，美国宾夕法尼亚州利蒂茨（Lititz），总统川普在兰开斯特机场举行竞选集会。(SAUL LOEB/AFP via Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
