--- a/pages/soh6/446062.md
+++ b/pages/soh6/446062.md
@@ -1,4 +1,4 @@
-### 【选情更新11/23】川普团队就宾州案上诉 或很快打到高院 民众高举“狮子王”图像支持川普 
+### 【选情更新11/23】川普或就宾州案上诉到高院 民众高举“狮子王”图像挺川
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
