--- a/pages/p9/953596.md
+++ b/pages/p9/953596.md
@@ -1,4 +1,4 @@
-### “十一”长假5.5亿中国人旅游 武肺疫情恐大规模复燃(图)
+### 教宗抛震撼弹 一本恐让北京怒气冲天新书？(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,14 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="武汉肺炎 旅游 " src="https://img3.secretchina.com/pic/2020/3-17/p2649901a177135089-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align:center">
+  <img alt="教宗方济各(Pope Francis)" src="https://img3.secretchina.com/pic/2020/7-7/p2727041a611992037-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   “十一”假期中国官方预测将有5.5亿人次在国内
-   <strong>
-    旅游
-   </strong>
-   ，其中超过1亿人选搭铁路。示意图。（图片来源：庞大卫/看中国）
+   教宗方济各(Pope Francis)(图片来源:公用领域 维基百科)
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -25,90 +21,64 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月29日讯】（看中国记者黎小葵综合报导）中国10月1日起连放“
+  【看中国2020年11月24日讯】中国对于
   <strong>
-   十一
+   新疆维吾尔族
   </strong>
-  ”、中秋节8天长假，官方预测，假期将有5.5亿人次在国内
+  的迫害行径，长期以来遭到西方世界批判，但梵谛冈却从来没有对此发声。不过，
   <strong>
-   旅游
-  </strong>
-  ，其中超过1亿人选搭
-  <strong>
-   铁路
-  </strong>
-  。外界担忧大规模人员流动恐导致
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
-    武汉肺炎
+   <span href="https://www.secretchina.com/news/gb/tag/教宗" target="_blank">
+    教宗
    </span>
+   方济各
   </strong>
-  疫情大规模复燃。
+  (Pope Francis)在 12月即将上市的新书中，第一次公开表示，他经常想及遭迫害的族群，例如像“洛兴雅人”及“可怜的新疆维吾尔族人”。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  根据旅行数据“Cirium Core”9月23日的显示，今年中国“黄金周”的预定航班超过16.4万，与2019年同期的14.8万架相比增长超过11%。“黄金周”期间，将有超过2780万名乘客搭乘国内航班，其中最繁忙的一天是10月7日，届时将有超过1.38万架航班飞行，与去年最繁忙的10月6日相比增长了9.6%。
- </p>
- <p>
-  中国
-  <span href="https://www.secretchina.com/news/gb/tag/旅游" target="_blank">
-   旅游
+  23日，根据
+  <span href="https://zh.wikipedia.org/wiki/%E6%96%B9%E6%BF%9F%E5%90%84_(%E6%95%99%E5%AE%97)">
+   教宗方济各
   </span>
-  研究院预测，假期内将有5.5亿人次在国内旅游，各景区正调查接待旅客量，由原本的最大承载量5成提高至7成半。中国铁路集团预计，10月1日将有1300万人次乘坐铁路出行，创疫情以来新高，当局预估整个假期将会有逾1亿人次选搭铁路。
+  所属耶稣会所发行的期刊“美国”(America)报导，教宗于12月1日将会出版新书“让我们梦想”(Let Us Dream)，该书是由教宗的英文自传作者伊凡里(Austen Ivereigh)来执笔，其内容描绘了教宗对于“后疫情时代”(post-Covid)的愿景，其中包括了反种族歧视及支持全民基本收入(UBI)等方面。
  </p>
  <p>
-  中央社报导，一名北京旅行业者指出，由于民众有比价及“去过的地方别再去”的心理，加之武汉肺炎疫情的关系，下决定的时间比往年迟，今年订票、订房时间9月上旬才开始出现订购潮。西南、西北部成为今年“
-  <span href="https://www.secretchina.com/news/gb/tag/十一" target="_blank">
-   十一
+  教宗于书中呼吁各界应该关注被边缘化族群，教宗相当感性地表示，我时常想到那些被压迫的人们：可怜的
+  <span href="https://zh.wikipedia.org/wiki/%E7%BB%B4%E5%90%BE%E5%B0%94%E6%97%8F">
+   维吾尔族
   </span>
-  ”假期最热门的旅游目的地，其中又以云南、四川、甘肃、宁夏等省区的景点最为热门。
+  人(poor Uighurs)、亚兹迪教派(Yazidi)信徒及洛兴雅人(Rohingya)。
  </p>
  <p>
-  虽然云南瑞丽近日一度封城，但从数据来看，西双版纳9月中以前的订房量较去年同期大增2倍以上。此外，也有部份北京人不想去太远、太热门的景点，选择就近在华北的山西、山东等省旅游。
+  <span href="https://www.secretchina.com/news/gb/tag/维吾尔族" target="_blank">
+   维吾尔族
+  </span>
+  的人口数大约有2,000万，超过了六成居是居住在中国；而洛兴雅人大半维穆斯林，人口大约150至200万，他们主要居住于孟加拉与缅甸；亚兹迪教派信徒人口数大约数十万至100多万，他们的语言是北库尔德语，多半是住在伊拉克、叙利亚及土耳其等地方。
  </p>
  <p>
-  据文化和旅游部透露，截至9月中旬，中国旅行社复业率已达75.72%，旅行团业务已恢复至去年同期的40%左右；星级酒店加快复业，9421间恢复经营，复业率达91% 。全国280个5A级旅游景区中，已有264个处实施分时预约制度。
+  中国政府于
+  <span href="https://www.secretchina.com/news/gb/tag/新疆" target="_blank">
+   新疆
+  </span>
+  以“集中营”等高压手段来迫害穆斯林维吾尔族，而引起国际高度的关切，可是教宗在过去并未曾公开声援过新疆维吾尔族，因而被解读是教廷不愿触怒北京，以影响梵中续签主教任命协议。但在梵中10月确认了续约之后，教宗于新书中就不再避讳关切新疆的宗教自由和人权，而让梵中之间的互动，投下了震撼弹。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  不过，需要注意的是，武肺疫情仍在全球肆虐，特别是中国大陆有大规模复燃迹象，且病毒传播诡异。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  以9月27日江西1起无症状感染者为例，其从菲律宾飞广州入境，隔离14天两次核酸检测结果均为阴性，但在9月24日解除隔离乘飞机飞往江西南昌后，经核酸检测复核呈阳性，为无症状感染者。
+  教宗于过去曾经为遭迫害，而从缅甸逃离的洛兴雅人来发声，亦曾经替被极端恐怖组织“伊斯兰国”(ISIS)奴役的亚兹迪教徒请命，不过他过去从来没有公开关切过
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  新疆维吾尔族人权。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -123,7 +93,7 @@
   </div>
  </center>
  <p>
-  此外，四川德阳发现2例“无症状感染者”解除隔离后呈阳性；江苏南京建邺区1例无症状感染者解除隔离后也呈阳性；黑龙江哈尔滨一名12岁学生，7月31日从美国入境沈阳，9月24日，核酸检测复查时结果也呈阳性。
+  教宗此次于新书中还使用了“被压迫”、“可怜”等词，来形容维吾尔族的处境，因而获得许多媒体的关注，例如：路透社、耶稣会期刊都以此当标题。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -138,7 +108,22 @@
   </div>
  </center>
  <p>
-  外界担忧，即将开始的5.5亿人出游或增加疫情传播风险，中国大陆恐陷入疫情大规模复燃危机。
+  路透社指出，近来有人权团体，不断写信要求教宗应该替新疆维吾尔族来发声，而美国国务卿蓬佩奥(Mike Pompeo)在10月访问教廷之时，亦于美梵合办的宗教自由会议上，可说是火力全开直批北京政府压迫新疆维吾尔人，因为教宗在过去始终是沉默以对。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  路透社称，北京政府一向都否认压迫新疆维吾尔族的相关指控，甚至中国外交部还多次严词批指这些指控是谎言及干涉内政，所以有许多梵中评论家分析认为，教宗在先前避提新疆维吾尔族人，是一个权宜之计，主要是避免影响10月的梵中续约的谈判。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -170,7 +155,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -202,13 +187,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/947581.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/947581.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/947581.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/29/947581.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/953596.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/953596.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/953596.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/24/953596.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/947581.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p9/953596.md' width='0px' height='0px'/>
