--- a/pages/nf4514/n12571687.md
+++ b/pages/nf4514/n12571687.md
@@ -47,7 +47,7 @@
  之前川普阵营宣布知名律师鲍威尔不代表川普律师团，这个消息引发各方关注。鲍威尔律师回应，自己致力于揭露大选欺诈的真相，并不允许“共产主义者窃国”。
 </p>
 <p>
- 川普总统在大选激战之际，同时出手痛击中共，外媒报导川普政府拟组建新联盟，在中共利用贸易实力胁迫他国时联手出击，同时将再把89家中企列入清单，限制其采购美国产品与技术，而一周前川普刚签署行政令，禁止美国人向与中共军方有关联的31家中企投资。
+ 川普总统在大选激战之际，同时出手痛击中共，外媒报导川普政府拟组建新联盟，在中共利用贸易实力胁迫他国时联手出击，同时将再把89家中企列入清单，限制其采购美国产品与技术，而一周前川普刚签署行政令禁止美国人向与中共军方有关联的31家中企投资。
 </p>
 <h4>
  以下是
@@ -57,7 +57,7 @@
  情况的实时更新：
 </h4>
 <h3>
- 川普：很快把大型诉讼提交法庭
+ 川普：大型诉讼被很快提交法庭
 </h3>
 <p>
  11月24日早上，川普总统转发了Breitbart的报导《79%的川普选民相信选举被盗》，并写道，“这（报导）100％是正确的，我们正在努力奋斗，我们的大型诉讼将说明所有选票欺诈行的细节，该诉讼很快将提交法庭。被操控的选举！”
