--- a/pages/nsc418/n12571687.md
+++ b/pages/nsc418/n12571687.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【大选更新11.24】川普：很快提交大型诉讼" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/145184-600x400.jpg"/>
+<div><img alt="【大选更新11.24】川普：GSA不决定谁当总统" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/145184-600x400.jpg"/>
 <div class="caption">
  川普资料照。（Chip Somodevilla / Getty Image）
 </div></div><hr/>
