--- a/pages/soh6/446380.md
+++ b/pages/soh6/446380.md
@@ -98,6 +98,22 @@
   团队一再指出，如果不比对签名，乔州的选票审计只是再数一遍欺诈性选票，因此他们不会承认计票结果。
  </p>
  <h2>
+  【密歇根州】
+ </h2>
+ <p>
+  密歇根州委员会在最大县认证失败、一名共和党委员弃权的情况下投票3：0通过认证，该做法当即遭到州众议院的质疑，并定于周三（11月25日）上午举行听证会。
+ </p>
+ <h2>
+  【宾夕法尼亚】
+ </h2>
+ <p>
+  宾夕法尼亚州立法委员会拒绝州众议院关于对2020年大选进行审计的要求，立法预算和财务委员会（LBFC）投票2-1反对审计，并称审计将是“不完整，重复，而且不可靠”的。目前
+  <ok href="/term/1041">
+   川普
+  </ok>
+  团队就该州案例在联邦第三巡回法院发起诉讼。
+ </p>
+ <h2>
   【明尼苏达州】
  </h2>
  <h3>
