--- a/pages/prog202/a102994531.md
+++ b/pages/prog202/a102994531.md
@@ -1,4 +1,4 @@
-### 【环球直击】10月27日完整版（2）
+### 【环球直击】11月24日完整版（2）
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,34 +7,33 @@
 
 <div><div class="post_content" itemprop="articleBody">
  <p>
-  【新唐人北京时间2020年10月28日讯】【环球直击】10月27日完整版（2）
- </p>
- <p>
+  【新唐人北京时间2020年11月25日讯】【环球直击】11月24日完整版（2）
+  <br/>
   <strong>
    提要
   </strong>
   <br/>
-  往美领馆寻庇护
-  <ok href="https://www.ntdtv.com/gb/港民.htm">
-   港民
+  <ok href="https://www.ntdtv.com/gb/宾州上诉.htm">
+   宾州上诉
   </ok>
-  团前召集人遭国安带走
+  获进展 巡回法院准川普团队快速审查；
   <br/>
-  五中全会期间 美国两
-  <ok href="https://www.ntdtv.com/gb/军事行动.htm">
-   军事行动
+  <ok href="https://www.ntdtv.com/gb/乔治亚州.htm">
+   乔治亚州
   </ok>
-  牵制中共
+  民众集会 批CNN沦为民主党宣传机器；
   <br/>
-  <ok href="https://www.ntdtv.com/gb/美印协议.htm">
-   美印协议
+  节日临近 白宫赦免
+  <ok href="https://www.ntdtv.com/gb/火鸡.htm">
+   火鸡
   </ok>
-  迈“准军事同盟” 蓬佩奥：抗中共威胁
+  迎接圣诞树；
   <br/>
-  获参院确认 巴雷特宣誓就任最高法院
-  <ok href="https://www.ntdtv.com/gb/大法官.htm">
-   大法官
+  发布
+  <ok href="https://www.ntdtv.com/gb/香港报告书.htm">
+   香港报告书
   </ok>
+  英拟撤走终审法院法官。
  </p>
  <div class="single_ad">
  </div>
@@ -42,13 +41,13 @@
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102973187.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102973187.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102973187.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2020/10/27/a102973187.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102994531.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102994531.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102994531.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2020/11/24/a102994531.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a102973187.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a102994531.md' width='0px' height='0px'/>
