--- a/pages/p1/953728.md
+++ b/pages/p1/953728.md
@@ -1,4 +1,4 @@
-### 煽动反美情绪？韩战阵亡军人遗骸最高规格安葬沈阳(图)
+### 孙大午病妻申请保释遭拒 两儿媳被刑拘(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="韩战 沈阳" src="https://img2.secretchina.com/pic/2019/5-11/p2422301a475297597-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align:center">
+  <img alt="" src="https://img3.secretchina.com/pic/2020/11-18/p2820371a273180056-ss.jpg"/>
   <br>
-   韩战期间对清津市进行岸轰的密苏里号。摄于1950年10月21日。（图片来源：维基百科）
+   本月11日，孙大午及其妻刘会茹等28人被河北警方带走调查。（图片来源：自由亚洲电台）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,116 +21,56 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月30日讯】今年是中共参加
+  【看中国2020年11月25日讯】（看中国记者苗薇综合报导）被外界形容为“敢言企业家”
   <strong>
-   韩战
-  </strong>
-  （朝鲜战争）70周年，辽宁
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/沈阳" target="_blank">
-    沈阳
+   <span href="https://www.secretchina.com/news/gb/tag/孙大午" target="_blank">
+    孙大午
    </span>
   </strong>
-  9月28日为117名韩战中阵亡的中国军人举行
+  及妻子
   <strong>
-   安葬仪式
+   刘会茹
   </strong>
-  。新一批军人遗骸无论从数量还是交接规格都超出以往，这令外界质疑与中共官方故意煽动民族主义情绪有关。
+  等人，本月11日被采取刑事强制措施。有大陆自媒体报导，警方近日拒绝疾病缠身的刘会茹
+  <strong>
+   取保候审
+  </strong>
+  申请。此外，孙大午的两个儿媳妇以及大午集团财务主管卢志英均被刑拘。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  据新华社报导，2014年至2019年，先后有599位在韩中国军人遗骸归国，均安葬在沈阳“抗美援朝烈士陵园”，此次于27日从韩国运回117具中国军人遗骸，大部分发掘自朝韩非军事区内。
- </p>
- <p>
-  自由亚洲电台报导，参与仪式的中共军方代表蒋建元表示要继承先辈“抗美援朝”精神。
- </p>
- <p>
-  他说，“先辈们用鲜血声明诠释了军人的价值。作为当代革命军人，我们更应该继承和发扬先辈们的优良传统。在祖国和人民需要的时候挺身而出，保卫祖国，保卫人民。”
- </p>
- <p>
-  对此，清华大学政治系原讲师吴强表示，官方高姿态迎接和安葬军人遗骸，其实背后更大的意义是宣扬反美。“反美基本上是
-  <span href="https://www.secretchina.com/news/gb/tag/韩战" target="_blank">
-   韩战
+  大陆自媒体“大白财经观察”25日报导指，11月11日子夜时分，
+  <span href="https://zh.wikipedia.org/wiki/%E5%AD%99%E5%A4%A7%E5%8D%88">
+   孙大午
   </span>
-  在过去70年官方宣传的主旋律。现在重新在国内以‘抗美援朝’为题材大量的宣传，基本上是唤醒反美历史记忆，突出反美的主旋律，体现了中国官方的心态对于韩战并没有基本的反省。”
+  等人是因涉嫌寻衅滋事、破坏生产经营等违法犯罪，而被公安机关采取刑事强制措施。不过，公安机关拘捕孙大午等人当日，却有点不寻常，包括河北保定市采取异地执法，在子夜时分行动，消息人士称：“当时抓了28人，几乎都是集团高层和孙大午的至亲。最后有5个人放出来了。”
  </p>
  <p>
-  他批评当局为了政治需要，利用“抗美援朝”煽动民族主义情绪。
+  今年67岁的刘会茹11月20日递交变更强制措施申请。孙大午亲属表示，刘会茹患有高血压、糖尿病等疾病，可谓年事已高，疾病缠身；而她不参与大午集团的决策和经营，不可能涉及违法犯罪，更不涉及暴力犯罪，也不属于其他不能取保候审的情况，不明白为何不能变更有关强制措施。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  广东退伍军人陈风强则认为，官方积极旧事重提与中美关系严峻有关。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  他说，“抗美援朝的时候（中国）是针对美国的，现在美国跟中国搞得那么僵，提高规格肯定与目前的美中关系有关。”陈风强认为，阵亡军人入土为安固然重要，幸存退伍老兵却也不该忽略。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  近期中美关系严峻之际，官方除了19日重开丹东的“抗美援朝纪念馆”，还计划推出多部以“抗美援朝”为题材的影视作品。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  外界留意到，受
-  <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
-   武汉肺炎
+  但警方认为“刘会茹有可能毁灭、伪造证据、干扰证人作证”，拒绝她的申请。换言之，孙妻将无法
+  <span href="https://www.secretchina.com/news/gb/tag/保释" target="_blank">
+   保释
   </span>
-  疫情影响，此次举行的安葬仪式从以往清明前，推迟到9月底，接近10月25日中共军方入朝参战70周年记念日。而此次交接和迎接死难军人遗骸规格也明显提高，当局首次使用运20运输机接送，并由两架军歼11B战机护航。沈阳机场还安排了最高规格的“水门礼”，由多辆消防车喷射水柱迎接专机。
+  候审。
+ </p>
+ <p>
+  孙大午大儿媳妇张媛是大午集团下属大午小学的校长，因提供银行卡用于走账活动，而被牵扯入“非法吸金”案中。二儿媳马晓晨是酒业公司副经理，以及大午集团财务主管卢志英，3人涉嫌罪名均是“非法吸收公众存款罪”。
+ </p>
+ <p>
+  大午集团建立于1985年，是一间大型民企，涉及养殖业、种植业、教育旅游、工业等领域，孙大午被誉为“企业家良心”。孙曾于2003年因所谓“非法吸收公众存款”被判有期徒刑3年、缓刑4年，罚款10万元人民币。今年8月，孙大午及其集团员工因土地问题与警方发生冲突被拘。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -145,7 +85,90 @@
   </div>
  </center>
  <p>
-  根据“中国抗美援朝纪念馆”的数字，韩战期间共有超过18万名中国军人阵亡。
+  孙大午及其企业遭此厄难，在
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  社交媒体上掀起了波澜。有网友批评，“恶魔当道，善人无路。”“中共抓捕杀害的永远都是中国人的精英！”“有良心的企业家都被共产，还被扣上一顶3尺六的帽子去坐牢。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  有的则说，“一个有良知的好人，对人民这么好的做法，会影响利益中的人，肯定不被中共接纳！”“共产党不亡，中华无望！”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  《华尔街日报》11月23日报导，孙大午因在网上为农民和农村企业发声而受到关注，他被拘留一事，也让中国法律界和商界的许多人感到不安。一些人表示，这一事件凸显了许多中国民营企业的脆弱生存状态，尤其是在遭遇中共官方支持的竞争对手时。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  报导说，
+  <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
+   习近平
+  </span>
+  自2012年底上台以来，一直寻求加强共产党对经济的控制，加大对国有企业的支持力度，抑制私人资本。然而，近几十年来，正是中国私营部门创造了中国经济的繁荣。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  《华尔街日报》引述笔名小晖的一篇评论说，一个危险的先例开始了，自己辛辛苦苦创立的企业，一不留神就会被全面接管。这个冬天，全国企业家们都一定在关注著孙大午和大午集团的命运。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  海外时评人士“公子沈”在直播节目中分析孙大午被抓的真正原因，他说，目前中共政权不稳，稳政权成为中共最大事情，私人企业家对中共效忠是第一位的，其贡献税收和繁荣经济的作用已经不重要了，而孙大午尊敬的两个人却是孙中山和孔子，并非中共领导人，显然和中共体制格格不入，挑战了中共的权威；其次，中国经济走入下坡路，中共没有钱了，在找任何借口没收和抢夺私企财产，孙大午这次被接管的财产很可能拿不回来了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -177,7 +200,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -209,13 +232,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/947699.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/947699.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/947699.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/30/947699.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/953728.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/953728.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/953728.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/25/953728.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/947699.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/953728.md' width='0px' height='0px'/>
