--- a/indexes/p6.md
+++ b/indexes/p6.md
@@ -1,3 +1,26 @@
-
-### 已转移至新页面 [看史海](S看史海.md) 
-
+#### [60年代“脑控”资料与中共脑控武器的危害(组图)](../pages/p6/953661.md) 
+#### [竞选总统惹祸 谁在追杀肯尼迪家族？(图)](../pages/p6/953719.md) 
+#### [中国商人的生与死(图)](../pages/p6/953485.md) 
+#### [沈阳“皇姑屯”的历史传说(组图)](../pages/p6/953000.md) 
+#### [铁流：市委干训班光怪陆离的生活(图)](../pages/p6/952291.md) 
+#### [第一次合作 共产党如何寄生于国民党坐大？(组图)](../pages/p6/952987.md) 
+#### [60年代“脑控”资料与中共脑控武器的危害(组图)](../pages/p6/953661.md) 
+#### [竞选总统惹祸 谁在追杀肯尼迪家族？(图)](../pages/p6/953719.md) 
+#### [中国商人的生与死(图)](../pages/p6/953485.md) 
+#### [传奇一生 大将军韩信的故事个个经典(图)](../pages/p6/952315.md) 
+#### [沈阳“皇姑屯”的历史传说(组图)](../pages/p6/953000.md) 
+#### [铁流：市委干训班光怪陆离的生活(图)](../pages/p6/952291.md) 
+#### [第一次合作 共产党如何寄生于国民党坐大？(组图)](../pages/p6/952987.md) 
+#### [追寻沼泽历史 CIA和FBI参与911骗局？(图)](../pages/p6/953476.md) 
+#### [【帝尧的故事】之五：帝喾仙去 挚继帝位(图)](../pages/p6/948871.md) 
+#### [大选中的“十月革命”阴影：利用媒体制造仇恨(组图)](../pages/p6/953265.md) 
+#### [中共不能说的秘密 毛泽东晚年最后一个靶子(图)](../pages/p6/952324.md) 
+#### [中共国各省骗子大全 看完绝对醒脑(图)](../pages/p6/953317.md) 
+#### [不寒而栗 共军侵华的历史真相浮出水面(图)](../pages/p6/951862.md) 
+#### [北宋包拯刚正不阿 激浊扬清(图)](../pages/p6/952574.md) 
+#### [银行家的美貌女儿如何沦为公共情妇？(图)](../pages/p6/952654.md) 
+#### [孙中山与中华国歌、国旗和国花(组图)](../pages/p6/952850.md) 
+#### [还说共党好？文革酷刑实录丧尽天良(图)](../pages/p6/951883.md) 
+#### [这位特工领导为何反对毛跟江青结婚？(组图)](../pages/p6/952211.md) 
+#### [【帝尧的故事】之四：帝喾四子 姜嫄生后稷(图)](../pages/p6/948870.md) 
+#### [全球影子政府 彼尔德伯格俱乐部(图)](../pages/p6/952930.md) 
