同步于: 11月25日22时4分

--- a/indexes/p5.md
+++ b/indexes/p5.md
@@ -1,26 +1,3 @@
-#### [美国发布调查报告 中国银行在国际市场折戟(组图)](../pages/p5/953747.md) 
-#### [那些违约的债券：出轨还是出鬼？(图)](../pages/p5/953692.md) 
-#### [【深度】人民币外升内贬的结果……(图)](../pages/p5/953681.md) 
-#### [华为有难 同行点赞？中国同行急于瓜分市场(图)](../pages/p5/953658.md) 
-#### [李克强要经济官员说真话 政令能出中南海？(图)](../pages/p5/953626.md) 
-#### [中国官方宣布全面脱贫 隐藏了这样的谎言(视频)](../pages/p5/953549.md) 
-#### [美国发布调查报告 中国银行在国际市场折戟(组图)](../pages/p5/953747.md) 
-#### [当土豪遇到壕沟……(组图)](../pages/p5/953685.md) 
-#### [那些违约的债券：出轨还是出鬼？(图)](../pages/p5/953692.md) 
-#### [中国第三家金融机构破产审计 股东权益为负(图)](../pages/p5/953660.md) 
-#### [【深度】人民币外升内贬的结果……(图)](../pages/p5/953681.md) 
-#### [华为有难 同行点赞？中国同行急于瓜分市场(图)](../pages/p5/953658.md) 
-#### [房价上涨过快 新西兰财政部和央行商讨对策](../pages/p5/953646.md) 
-#### [李克强要经济官员说真话 政令能出中南海？(图)](../pages/p5/953626.md) 
-#### [美国拟列89家中企入“军方黑名单”](../pages/p5/953586.md) 
-#### [华为遭制裁落难中国手机同业抢其市场(图)](../pages/p5/953582.md) 
-#### [阿里巴巴主席服软表态支持反垄断监管(图)](../pages/p5/953577.md) 
-#### [APEC年会美中首脑出席 疫情挑战是否亚太契机？(图)](../pages/p5/953571.md) 
-#### [中国官方宣布全面脱贫 隐藏了这样的谎言(视频)](../pages/p5/953549.md) 
-#### [人民币外升内贬 平息债市风波已不可能(图)](../pages/p5/953559.md) 
-#### [中国第三家金融机构破产 个人存款怎么办？(图)](../pages/p5/953546.md) 
-#### [在美国上市的中概股是否真要玩完？](../pages/p5/953531.md) 
-#### [一降再降 华晨集团信评被下修至最低等级](../pages/p5/953524.md) 
-#### [债务危机下：民营和国企巨头都在谢幕……(图)](../pages/p5/953489.md) 
-#### [90年代“逃废债”背景和解决(图)](../pages/p5/953467.md) 
-#### [屋漏偏逢连夜雨：马云再遇大麻烦…(图)](../pages/p5/953475.md) 
+
+### 已转移至新页面 [看财经](S看财经.md) 
+
