--- a/indexes/p4.md
+++ b/indexes/p4.md
@@ -1,26 +1,3 @@
-#### [川普选举诉讼奇招暗伏 有好戏看了(图)](../pages/p4/953666.md) 
-#### [美国主流媒体怎么了（上）？(图)](../pages/p4/953672.md) 
-#### [程晓农：中美水下军事对抗(图)](../pages/p4/953670.md) 
-#### [人们看到了拜登的三次行窃(图)](../pages/p4/953669.md) 
-#### [川普 竟与华夏历史上这一名人如此相像？(图)](../pages/p4/953663.md) 
-#### [独裁者越疯狂 离死期越近(图)](../pages/p4/953576.md) 
-#### [林伍德震撼猛料 希拉里亲自指导销毁舞弊证据(视频)](../pages/p4/953732.md) 
-#### [夏小强观点：拜登涉多重重大犯罪案 美国主流媒体为何不报？(视频)](../pages/p4/953724.md) 
-#### [川普选举诉讼奇招暗伏 有好戏看了(图)](../pages/p4/953666.md) 
-#### [美国主流媒体怎么了（上）？(图)](../pages/p4/953672.md) 
-#### [川普与60年前肯尼迪境遇相似 美国最大威胁哪？(视频)](../pages/p4/953653.md) 
-#### [程晓农：中美水下军事对抗(图)](../pages/p4/953670.md) 
-#### [中共突然镇压反“996”声浪 与 拜登潜在的祸国性(图)](../pages/p4/953675.md) 
-#### [人们看到了拜登的三次行窃(图)](../pages/p4/953669.md) 
-#### [川普 竟与华夏历史上这一名人如此相像？(图)](../pages/p4/953663.md) 
-#### [陈光诚：末法时期正邪博弈 需你我站起来(视频)](../pages/p4/953603.md) 
-#### [独裁者越疯狂 离死期越近(图)](../pages/p4/953576.md) 
-#### [我为什么预测川普会再次当选美国总统(图)](../pages/p4/953572.md) 
-#### [【东方纵横】美国人民公社 前车之鉴(视频)](../pages/p4/953564.md) 
-#### [大选写腻了 干脆直接告诉你们结果吧(图)](../pages/p4/953568.md) 
-#### [陈光诚：逃奔自由也是“罪”(图)](../pages/p4/953567.md) 
-#### [美特种部队直接向防长报告意味着什么(图)](../pages/p4/953566.md) 
-#### [Dominion与中国数据中心直接连线？川普已掌握服务器(视频)](../pages/p4/953522.md) 
-#### [民主党疯狂反扑 光明会暗号预示暗杀川普？(视频)](../pages/p4/953511.md) 
-#### [陈光诚：选票舞弊者或是叛国罪 台湾总统蔡英文被忽悠(视频)](../pages/p4/953484.md) 
-#### [放过那些人生只剩作业的孩子(图)](../pages/p4/953459.md) 
+
+### 已转移至新页面 [看博谈](S看博谈.md) 
+
