--- a/pages/nf4514/n12567305.md
+++ b/pages/nf4514/n12567305.md
@@ -730,6 +730,13 @@
       据“Just the News”网站11月21日报导，特瑞纳表示，在对川普团队公布的证据进行审查后，包括许多声明有选民欺诈的宣誓证词，以及著名数学家发表的宾州高达10万张选票受质疑的宣誓书，他认为这些证据已经满足了避免撤案诉讼动议的第一级法律审查，或者说避免了联邦民事诉讼程序（中，第12条(b)款(6)项“未能就其诉讼标的提供足以判定救济之陈述”而被法院撤销诉讼的情况。
      </p>
      <p>
+      【大选更新11.21】
+      <ok href="https://www.epochtimes.com/gb/20/11/21/n12565761.htm">
+       请点击这里
+      </ok>
+      。
+     </p>
+     <p>
       责任编辑：李玲
      </p>
     </p>
