同步于: 11月26日2时3分

--- a/pages/soh6/446785.md
+++ b/pages/soh6/446785.md
@@ -183,13 +183,13 @@
   美军电脑工程师：Dominion可被遥控修改投票结果
  </h3>
  <p>
-  前美国航空管制系统电话交换机工程师、网路交换机工程曾杰克表示，Dominion投票系统可被远程操控来修改投票结果。他说：“投票系统都是独立的，这里面有一个软体，可以被窜改，这个设计可以在当场微调，还可以从远端遥控。”
+  前美国航空管制系统电话交换机工程师、网路交换机工程师曾杰克表示，Dominion投票系统可被远程操控来修改投票结果。他说：“投票系统都是独立的，这里面有一个软体，可以被窜改，这个设计可以在当场微调，还可以从远端遥控。”
  </p>
  <p>
   曾杰克还谈到，因为Dominion投票系统的数据可以被存档，而且可以通过IP地址查询数据从哪里来，因此可以查找到作弊的源头。
  </p>
  <h3>
-  拒认认可选举结果 密州共和党人遭严重威胁
+  拒绝认可选举结果 密州共和党人遭严重威胁
  </h3>
  <p>
   密州共和党人希克尔（Norm Shinkle）透露，他因为拒绝认证
