--- a/pages/soh6/446785.md
+++ b/pages/soh6/446785.md
@@ -164,6 +164,15 @@
   中各方态度&gt;
  </h1>
  <h3 style="line-height:1.38">
+  金里奇：盗窃选举是大范围的违法行动
+ </h3>
+ <p>
+  美国前众议长金里奇（Newt Gingrich）近日表示，本次美国大选被盗窃，而这是通过一些个人行与政府官员之间的非法合作完成的，是一场大范围的违法行动。他表示，“盗窃选举”并不是一项容易的任务，这些犯罪者自选举日开始就一直再努力掩盖其形迹，但是“他们的动作还是不够快”。
+ </p>
+ <p>
+  金里奇说：“他们（盗窃选举的罪犯们）企图在其罪行被完全暴露给美国公众之前，把其犯罪证据清理乾净。但我们不会允许这种情况发生，否则，我们将可能再也无法信任我们选举的公正性。”
+ </p>
+ <h3 style="line-height:1.38">
   伍德大律师：美国永远不会成为中国
  </h3>
  <p>
