--- a/pages/p2/953756.md
+++ b/pages/p2/953756.md
@@ -1,4 +1,4 @@
-### 习近平五中全会有惊人计划?公安部发声保安全(图)
+### 党媒自揭败象 李克强发火 习近平难入眠(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="2020年5月28日人大闭幕，通过港版国安法起草决定，习近平按投票器。" src="https://img3.secretchina.com/pic/2020/7-25/p2740482a762283711-ss.jpg" style="width:600px"/>
+ <p style="text-align: center;">
+  <img alt="" src="https://img2.secretchina.com/pic/2019/11-25/p2569682a348914318-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   2020年5月28日人大闭幕，通过港版国安法起草决定，习近平按投票器。（图片来源:Kevin Frayer/Getty Images）
+   习近平和李克强（图片来源: Feng Li/Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,69 +21,90 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  【九評之七】评中国共产党的杀人历史](http://141.164.51.119:10000/videos/news/../res/jiuping/index.html)
-
-#### [ 🔥  自己打自己！發射導彈竟落在廣西；偷了就跑 又一中共軍方特務被抓；](http://141.164.51.119:10000/videos/news/soh01.html)
-
-#### [ 🔥  揭开中共秘密结盟日军，卖国求生秘闻 ](http://141.164.51.119:10000/videos/news/epoch01.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月1日讯】（看中国记者林中宇综合报导）在中共总书记
+  【看中国2020年11月26日讯】（看中国记者林中宇综合报导）中共党媒日前刊文抨击官员“懒政、
+  <strong>
+   怠政
+  </strong>
+  ”，并进一步揭穿官员怠工的真正原因。这个问题是中共官场老问题，
+  <strong>
+   李克强
+  </strong>
+  曾多次为此发火，而
   <strong>
    <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
     习近平
    </span>
   </strong>
-  8月26日颁授警旗帜后，中共
-  <strong>
-   公安部
-  </strong>
-  昨天（31日）宣示全力保中共“政治安全”，维稳中共十九届
-  <strong>
-   五中全会
-  </strong>
-  。有报导说，五中全会将研拟的一项内容，透露习近平欲掌权至2035年，比肩毛泽东的野心。
+  也被指难民入眠。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  综合中国媒体报导，中共
-  <span href="https://www.secretchina.com/news/gb/tag/公安部" target="_blank">
-   公安部
+  11月24日，中共党媒《人民日报》刊文称，中共官员“遇到困难绕着走、解决矛盾问题不积极主动。还有的人认为‘干得越多犯错的可能性越大’、‘不求有功但求无过’……”
+ </p>
+ <p>
+  文章认为怠工的主要原因为“怕出事就不干事”，并提醒官员们要搞清楚“错误”与“失误”的差别，同时声称“那些落马的官员，被惩处不是因为干事多而出现失误，而是主观故意干了违法乱纪的事”。
+ </p>
+ <p>
+  党媒称，“一些人感觉不自在了、捞不到好处了，消极怠工不作为不说，还编出这一套消极的说辞”。
+ </p>
+ <p>
+  为了督促各级官员做出改变，文章称，“不干事本身就是错，不担责终究要被问责”。
+ </p>
+ <p>
+  近年官场弥漫
+  <span href="https://www.secretchina.com/news/gb/tag/怠政" target="_blank">
+   怠政
   </span>
-  昨天上午在北京举行记者会，发言人张明针对习近平26日在给警察授旗仪式的讲话，表示公安部要求全国公安机关，全力维护“国家政治安全”和社会稳定，为中共十九届五中全会召开等，创造“安全稳定的政治社会环境”，云云。
+  气氛，“怠政”“懒政”被认为是各级官员对反腐的一种另类抵挡方式。官媒公开报导说，中共官员已出现“混日子”状态。官员在上班时间赌博、吸毒、打游戏、网购、看色情片、甚至通奸等。
  </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p>
-  张明强调公安部提出5点要求，首先是“始终把维护国家政治安全置于首位”。
- </p>
- <p>
-  今年以来，中共处于内外交困，中共病毒疫情全球传播引发的抗议追责，以及北京强推港版国安法引来的国际谴责巨浪，中共与以美国为首的西方自由社会的关系，降到了近几十年的最低点，美中互关对方一个总领事馆，美国国务卿等多名高官先后发表对中共“讨伐檄文”，
-  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
-   川普
+  官媒还说，中共国务院总理
+  <span href="https://www.secretchina.com/news/gb/tag/李克强" target="_blank">
+   李克强
   </span>
-  (特朗普)政府密集出招制裁中共。中印边界冲突，以及南海形势紧张，也令北京当局与周边国家间的关系不断恶化。
+  多次因官员怠政而“发火”，甚至一度用茶杯敲砸桌子，但仍无济于事。
  </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p>
-  <span href="https://zh.wikipedia.org/zh-hans/%E4%B9%A0%E8%BF%91%E5%B9%B3" target="_blank">
+  有意思的是，最大怠政事件，就与
+  <span href="https://zh.wikipedia.org/wiki/%E4%B9%A0%E8%BF%91%E5%B9%B3" target="_blank">
    习近平
   </span>
-  8月24日在中南海主持的一个专家座谈会上再度谈到外部环境恶化。他称“当今世界正经历百年未有之大变局”，世界进入动荡变革期，中共今后将面临“更多逆风逆水的外部环境”。
- </p>
- <p>
-  美国“信息与战略研究所”经济学者李恒青在美国之音对话栏目中认为，习近平在改变了中共的外交格局后正逐渐意识到中共面临着前所未有的危机，他现在不得不采取行动救党、救他自己。
+  有关。有着“龙脉”之称的秦岭，近几年出现大量违建别墅。此事惊动习近平，但6次批示整治未果，皆因当地高官集体对习近平阳奉阴违，最终习震怒派出中纪委人马，2018年7月中纪委副书记徐令义率领专项整治工作组进驻西安，陕西官场被大规模整肃，震波一直持续至今。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -98,7 +119,7 @@
   </div>
  </center>
  <p>
-  法广分析认为，中央领导层早已经做好了最坏的打算。而所谓政治安全就是政权安全，就是要“保江山”。中共最高领导人对政权不安全感似乎从来没有这么重，说起来难以置信。
+  近年中共意识形态崩溃迹象明显，习近平当局不时出狠招整治不听党话的党官。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -113,11 +134,11 @@
   </div>
  </center>
  <p>
-  在国内外包括体制内都有反弹声音，
+  旅美
   <span href="https://www.secretchina.com" target="_blank">
    中国
   </span>
-  国内更是反习声音高涨，也直接危及习近平和中共的统治。中共其中一项内忧被认为是今年以来中国知识界、企业界、政界对习近平和中共的离心离德现象。
+  时事评论人士谢选骏指，实际上，中共大部分党员和干部对共产主义理想的信念早已荡然无存了，他们现在几乎处于怠政状态，大家都观望着习近平独自折腾。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -132,22 +153,7 @@
   </div>
  </center>
  <p>
-  作为红二代及中共党校退休教授的蔡霞，前不久网传有一段已被证实是她自己的录音，指责习近平正带着中国远离开放与改革的道路。她称习近平为“黑帮老大”，并称中共是“政治僵尸”，已经无法自我改革。她认为，中共内部冲突会一次爆发，导致中共整个体制崩坏瓦解。不少中国问题专家相信，习近平主政令中国变天加速，中共难有二十大。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  不过，尽管中共可能随时倒台，习近平似乎野心不减。
+  自由亚洲电台的一篇报导指出，习是希望建设坚强的马克思主义执政党，首先要从共产主义理想信念做起。但问题是现在还有多少中共党员持有共产主义信念呢？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -166,11 +172,7 @@
   </ins>
  </center>
  <p>
-  新华社7月底报导，中共中央政治局决定于10月召开十九届
-  <span href="https://www.secretchina.com/news/gb/tag/五中全会" target="_blank">
-   五中全会
-  </span>
-  ，议题除了提及下一个2021至2025年的5年计划“十四五规划”，还有“2035远景目标”。
+  政治与经济学者程晓农早前分析说，中共官员出现耳语诋毁和消极怠工的反弹情绪。中共党内有三种人让习难以入眠：一是看笑话的，二是不作为的，三是盲干的。而习对官员的离心离德也心中有数。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -185,11 +187,7 @@
   </div>
  </center>
  <p>
-  《日经亚洲评论》（Nikkei Asian Review）资深编辑中泽克二（Katsuji Nakazawa）8月6日撰文指出，这则报导，透露出中国国家主席习近平欲掌权至2035年的企图，届时他将年高82岁，而统治中国至死方休的
-  <span href="https://www.secretchina.com/news/gb/tag/毛泽东" target="_blank">
-   毛泽东
-  </span>
-  辞世时正好82岁。
+  被清华大学开除的原该校法学院教授许章润，7月19日向全体清华校友发表了一封公开信。其中部分内容直书官场现状。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -204,7 +202,7 @@
   </div>
  </center>
  <p>
-  文章说，根据中共惯例，这个夏季将是关键时期，恐影响习年代的未来。因为在2022年的中共第20次全国代表大会（二十大）之前，包括关键“人事梯队”都将在今年讨论，一场全面的政治斗争实已展开。
+  许章润描述称：“士人普遍委顿，善作靡靡之音，不甘寂寞；官场心灰意懒，上下虚与委蛇，只待弃舟。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -219,7 +217,7 @@
   </div>
  </center>
  <p>
-  文章指出，2035超长期计划是习政治的核心。然而在当前状况下，他的计划是否能被接受；10月的十九届五中全会结束后，答案就会变得明朗。
+  许章润所指官员“只待弃舟”，对应的是中共政权陷内忧外患，官员如感地震前先兆，纷纷谋划后路，随时出逃。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -251,7 +249,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -283,13 +281,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/944738.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/944738.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/944738.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/01/944738.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/953756.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/953756.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/953756.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/26/953756.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p2/944738.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p2/953756.md' width='0px' height='0px'/>
